--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 body{
     font-family: 'Poppins', sans-serif;
+    padding: 0px;
+    margin: 0px;
   }
 h1{
     font-size: 50px;
 }
-.name-color{
+h2{
+    font-size: 40px;
+    
+}
+p{
+    color: dimgray;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -15,4 +24,54 @@ h1{
 }
 .half-width img{
     width: 100%;
+    
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 550px;
+    padding-bottom: 160px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.experience-area{
+    padding-top: 100px;
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 8px;
+    height: 67%;
+    background-color: white;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan ) ;
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 14px;
+    padding-bottom: 10px;
 }
